# patc_kokkos

./: .gitignore  .gitmodules  README.md
code/euler2d_kokkos_functor/: HydroParams.h  HydroRun.cpp  main.cpp  test_implode.ini
code/euler3d_kokkos_functor/: HydroRun.h  Makefile  kokkos_shared.h  test_blast.ini
code/exercises/12_FiniteDifference2DWave/Kokkos/: .gitignore  Makefile  finite_difference_2dwave.cpp  plot_csv.py  plot_imshow_csv.py
code/exercises/12_FiniteDifference2DWave/Kokkos-Team/: .gitignore  CMakeLists.txt  Makefile  finite_difference_2dwave.cpp  plot_csv.py  plot_imshow_csv.py
code/exercises/12_FiniteDifference2DWave/Serial/: .gitignore  CMakeLists.txt  Makefile  finite_difference_2dwave.cpp  plot_csv.py  plot_imshow_csv.py
code/exercises/12_FiniteDifference2DWave/doc/: readme
code/exercises/cg/: readme.txt
code/exercises/cg/kokkos/: Makefile  (+10 more)
code/exercises/hierarchical_parallelism/: readme.txt
code/exercises/mandelbrot_kokkos/: CMakeLists.txt
code/exercises/mandelbrot_kokkos/basic/: README.txt  mandelbrot.h
code/exercises/mandelbrot_kokkos/basic/solution/: kokkos_shared.h  main.cpp
code/exercises/mandelbrot_kokkos/doc/: readme.txt
code/exercises/mandelbrot_kokkos/kokkos_basic/: main.cpp  mandelbrot.h
code/exercises/mandelbrot_kokkos/kokkos_basic/solution/: main.cpp
code/exercises/mandelbrot_kokkos/kokkos_mdrange/: CMakeLists.txt  README.txt  main.cpp
code/exercises/mandelbrot_kokkos/kokkos_pipelined0/: CMakeLists.txt  main.cpp
code/exercises/mandelbrot_kokkos/kokkos_pipelined1/: CMakeLists.txt  constants.h  main.cpp
code/exercises/mandelbrot_kokkos/pipelined1/: mandelbrot.h
code/exercises/mandelbrot_kokkos/serial/: Makefile  constants.h  main.cpp
code/exercises/mpi_kokkos/: .gitignore  Makefile  main.cpp  readme  readme_bsub.txt  submit_ouessant.sh  submit_ouessant_cpu.sh  submit_ouessant_gpu.sh
code/handson/1a/: readme  submit_ouessant_cpu.sh  submit_ouessant_gpu.sh
code/handson/2/: .gitignore  readme
code/handson/3/mandelbrot_kokkos/kokkos_basic/src_solution/: CMakeLists.txt  constants.h  main.cpp
code/handson/3/mandelbrot_kokkos/kokkos_mdrange/: CMakeLists.txt
code/handson/3/mandelbrot_kokkos/kokkos_mdrange/solution/: main.cpp
code/handson/3/mandelbrot_kokkos/kokkos_mdrange/src/: CMakeLists.txt  main.cpp  mandelbrot.h
code/handson/3/mandelbrot_kokkos/kokkos_mdrange/src_solution/: kokkos_shared.h  main.cpp
code/handson/3/mandelbrot_kokkos/kokkos_pipelined0/: CMakeLists.txt  kokkos_shared.h
code/handson/3/mandelbrot_kokkos/kokkos_pipelined0/src/: CMakeLists.txt  Makefile.orig  kokkos_shared.h  main.cpp
code/handson/4/stencil/: .gitignore  CMakeLists.txt  job_cuda_ouessant.sh  job_power8_ouessant.sh  readme
code/handson/4/stencil/src/: stencil.cpp  test_stencil_3d_flat.cpp  test_stencil_3d_flat_vector.cpp  test_stencil_3d_range.cpp  test_stencil_3d_range_vector.cpp  test_stencil_3d_range_vector2.cpp
code/handson/4/stencil/src_solution/: CMakeLists.txt
code/miniapps/SummerSchool2016/: .gitignore  readme.md
code/miniapps/TeaLeaf/: readme.md
code/miniapps/euler2d/: readme.txt
code/miniapps/euler2d/euler2d_serial/src/: Arrays.h  CMakeLists.txt  HydroParams.h  HydroRun.cpp  HydroRun.h  hydro_common.h  main.cpp  test_blast.ini
code/miniapps/euler2d_kokkos_functor/: .gitignore  CMakeLists.txt  HydroParams.cpp  HydroParams.h  HydroRun.cpp  HydroRun.h  HydroRunFunctors.h  kokkos_shared.h  test_blast.ini
code/miniapps/euler2d_kokkos_functor_v2/: HydroRunFunctors.h  kokkos_shared.h  main.cpp
code/miniapps/euler2d_kokkos_functor_v3/: .gitignore
code/miniapps/euler3d_kokkos_functor/: .gitignore  HydroBaseFunctor.h  HydroParams.cpp  HydroParams.h  HydroRun.cpp  HydroRun.h  HydroRunFunctors.h  LICENSE  common_types.h  hydro_common.h  main.cpp
code/miniapps/mandelbrot_kokkos/: README.md
code/miniapps/miniMD/: readme.md
code/miniapps/miniPIC/: miniPIC-apex_160413.tgz  readme
code/utils/: job_cuda_ouessant.sh  job_power8_ouessant.sh  readme  submit_ouessant.sh
doc/: readme  readme_build_kokkos_ouessant  readme_doc
doc/misc/: readme
doc/ouessant/: readme  submit_job_gpu1.sh  submit_job_openmp.sh  submit_job_pure_mpi.sh
doc/trilinos/: configure_tpetra_kokkos_cuda_nvcc_wrapper.sh  readme.txt
doc/trilinos/tpetra_example/: CMakeLists.txt  readme.txt
doc/trilinos/trilinos_kokkos_examples/: CMakeLists.txt  readme.txt
doc/trilinos/trilinos_kokkos_examples/KokkosTpetra/: CMakeLists.txt  KokkosTpetra_02_problem.cpp  KokkosTpetra_03_fill.cpp  KokkosTpetra_04_tpetra.cpp  KokkosTpetra_05_solve.cpp
slides/: .editorconfig  .gitignore  .gitignore~  Makefile  notes.txt
slides/euler/: .gitignore  Makefile  code  euler.tex  euler_kokkos_2017.tex  patc_kokkos_2018_euler.tex  patc_kokkos_2019_euler.tex
slides/intro/: .gitignore  Makefile  asynch_tasking.tex  future_parallel_cpp.tex  kokkos.tex  openacc_openmp.tex  other_interesting_things.tex  patc_kokkos_2017.tex  patc_kokkos_2018.tex  patc_kokkos_2018_intro.tex  patc_kokkos_2019_intro.tex  perf_portability.tex  recommended_links.tex  schedule.tex  supercomputer.tex
slides/intro/code/: pygmentize2.tex
slides/kokkos/: .gitignore  Makefile  Makefile.cafe_calcul  Makefile.cafe_loops  build_kokkos.tex  cafe_calcul_kokkos_2021.tex  cafe_calcul_plan.tex  cafe_loops_kokkos_2021.tex  doc  finite_difference.tex  hands_on_1.tex  hands_on_2.tex  installed_kokkos.tex  introduction.tex  kokkos_cmake_integration.tex  kokkos_concepts.tex  kokkos_containers.tex  kokkos_cpu_gpu.tex  kokkos_cpu_gpu2.tex  kokkos_cscs.tex  kokkos_devel_at_mdls.tex  kokkos_euler.tex  kokkos_for_cuda_users.tex  kokkos_functor_lambda.tex  kokkos_laplace.tex  kokkos_minimal.tex  kokkos_mpi.tex  kokkos_profiling_interface.tex  kokkos_random_gen.tex  kokkos_thread_dispatch.tex  mandelbrot_set.tex  memory_bw.tex  ouessant.tex  patc_kokkos_2017.tex  patc_kokkos_2018.tex  patc_kokkos_2019.tex  trilinos.tex  tutorial_1day.tex
slides/kokkos/images/: ouessant_lstopo.xml  readme_montecarlo.txt
slides/kokkos/tikz/: Makefile  row-major-cuda.tex  row-major-openmp.tex  row-major.tex  sycl.tex
(+120 files in other folders)
